# re-sputnik

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  EULA.ru.txt  EULA.txt  NOTICE  README.md  README_cn.md  README_fa.md  README_ru.md  launcher.py  pyproject.toml  qodana.yaml  re_sputnik.spec  resputnik.pot
.claude/: settings.json
.github/workflows/: build.yml  release.yml  test.yml
THIRD_PARTY_LICENSES/: Lucide-ISC.txt  Phosphor-MIT.txt  README.txt  SecretStorage-BSD-3-Clause.txt  jeepney-MIT.txt
docs/: BUILD_macos.md  MOBILE_CONCEPT_BRIEF_ru.md  PRESENTATION_BRIEF_ru.md
docs/design/: CLAUDE_DESIGN_RESPUTNIK.md  RESPUTNIK_DESIGN_UPDATE.md
files/design_handoff_resputnik_logo/: README.md  Re-Sputnik Logo Exploration.dc.html
scripts/: capture_screens.py  capture_screens_live.py  fetch_flags.py  gen_icons.py  render_icons.py  smoke_screens.py
src/re_sputnik/: __init__.py  __main__.py  app.py  branding.py  i18n.py  legal.py  profiles.py  secrets.py  settings.py
src/re_sputnik/assets/fonts/: README.txt
src/re_sputnik/assets/icons/: README.txt
src/re_sputnik/banner/: .thumbnail  RESPUTNIK_REDESIGN_CHANGES.md  Re Sputnik Icons and Banner.dc.html
src/re_sputnik/banner/icons/: .thumbnail  RESPUTNIK_REDESIGN_CHANGES.md  Re Sputnik Icons and Banner.dc.html  Re Sputnik Quick Setup.dc.html  Resputnik Redesign Deck.dc.html
src/re_sputnik/banner/icons/uploads/: CLAUDE_DESIGN_ICONS_REQUEST.md  RESPUTNIK_DESIGN.md
src/re_sputnik/engine/: __init__.py  _net.py  access.py  byedpi.py  core_health.py  executor.py  finalize.py  firmware.py  firstrun.py  install_app.py  ip_info.py  key_lease.py  lan.py  maintenance.py  mirror.py  network.py  nodes.py  orchestrator.py  overview.py  preinstall.py  router_security.py  rules.py  security.py  sqm.py  upnp.py  vpn_link.py  zapret.py
src/re_sputnik/locale/en/LC_MESSAGES/: resputnik.mo  resputnik.po
src/re_sputnik/router/: __init__.py  client.py  discovery.py  state.py
src/re_sputnik/ui/: __init__.py  about_screen.py  access_screen.py  advanced_screen.py  antidpi_screen.py  byedpi_screen.py  connect_screen.py  core_screen.py  diagnostics_screen.py  finalize_screen.py  firstrun_screen.py  flags.py  icons.py  internet_screen.py  kit.py  nodes_screen.py  overview_screen.py  preinstall_screen.py  quick_nodes_screen.py  rules_screen.py  scrollpatch.py  security_screen.py  settings_shell.py  software_screen.py  theme.py  verify_screen.py  wifi_ap_screen.py  worker.py
tests/: test_client_auth.py  test_pubkey_relabel.py
(+4 files in other folders)
